plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kongbap'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.security:spring-security-crypto'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.30.1'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

// static 폴더의 파일들을 docs 폴더로 자동 복사 (배포 불필요 관리자 전용 화면 제외)
tasks.register('copyToDocs', Copy) {
    from 'src/main/resources/static'
    into 'docs'
    exclude 'analytics.html'
}

processResources.finalizedBy copyToDocs